# vscode-catch2-test-adapter

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
documents/configuration/: test.advancedExecutables.md
src/: AdvancedExecutableInterface.ts  Configurations.ts  Spawner.ts  WorkspaceManager.ts  WorkspaceShared.ts
src/framework/: AbstractExecutable.ts  ExecutableFactory.ts  SharedTestTags.ts
src/framework/Taef/: TaefBinaryExecutable.ts  TaefBinaryTest.ts
src/util/: FSWrapper.ts
test/cpp/: CMakeLists.txt
test/cpp/taef/: CMakeLists.txt  taef1.cpp  taef2.cpp
test/repo_scripts/: deploy.ts
